--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+asgiref==3.2.7
+av==7.0.2.dev0
+Cython==0.29.16
+Django==3.0.5
+image==1.5.31
+numpy==1.18.3
+opencv-python==4.2.0.34
+Pillow==7.1.1
 pygame==1.9.6
+pytz==2019.3
+six==1.14.0
+sqlparse==0.3.1
 tellopy==0.6.0
+av==7.0.1
